@@ -20,7 +20,7 @@ PROJECT_NAME           = "libIEC61850"
 
 PROJECT_NUMBER         = 0.9.1
 
-PROJECT_BRIEF          = "Open-source IEC 61850 MMS/GOOSE server and client library"
+PROJECT_BRIEF          = "Open-source IEC 61850 MMS/GOOSE/SV server and client library"
 
 # With the PROJECT_LOGO tag one can specify an logo or icon that is
 # included in the documentation. The maximum height of the logo should not
