@@ -26,11 +26,7 @@
 
 #include "mms_value.h"
 #include "MmsPdu.h"
-#include "mms_access_result.h"
 #include "conversions.h"
-
-
-
 
 MmsValue*
 mmsMsg_parseDataElement(Data_t* dataElement);
