@@ -598,7 +598,6 @@ EXPORTS
     CDC_SPV_create
     CDC_TMS_create
     MmsValue_getUtcTimeQuality
-    MmsConnection_getMmsConnectionParameters
-    IedServer_updateVisibleStringAttributeValue
-    MmsValue_setUtcTimeQuality
+    MmsValue_decodeMmsData
+    MmsValue_encodeMmsData
 
